--- a/4_classes.ipynb
+++ b/4_classes.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "## Objectif :\n",
     "Ce notebook a pour but de vous initier à la programmation orientée objet (POO) en Python à travers des exercices guidés.\n",
-    "Nous allons construire un petit système de gestion d'animaux dans un refuge."
+    "Nous allons construire un petit système de gestion d'animaux dans un refuge.\n",
+    "\n",
+    "Référez vous à la [Cheat Sheet](python_cheat_sheet_classes.pdf) pour un aide mémoire sur les différents éléments de synthaxe liée aux classes. "
    ]
   },
   {
@@ -300,7 +302,7 @@
     "\n",
     "Créons une liste qui contient tous les animaux que nous avons définis jusque là.\n",
     "\n",
-    "Ecrire une boucle qui pour chaque animal affiche sa présentation et son cri. "
+    "Ecrire une boucle qui, pour chaque animal, affiche sa présentation et son cri. "
    ]
   },
   {
