--- a/5_classes_2.ipynb
+++ b/5_classes_2.ipynb
@@ -8,7 +8,7 @@
     "# Programmation Orientée Objet (POO) : Suite\n",
     "\n",
     "## Objectif :\n",
-    "Ce notebook a pour but d'approfondir vos connaissances des classes en python sur la base de ce que vous avez appris dans le notebook [4_classes.ipynb](classes)."
+    "Ce notebook a pour but d'approfondir vos connaissances des classes en python sur la base de ce que vous avez appris dans le notebook 4_classes.ipynb."
    ]
   },
   {
